Fixed overlapping fullscreen button issue

--- a/2html.css
+++ b/2html.css
@@ -13,6 +13,7 @@ stitle {
   font-weight: bold;
   position: sticky;
   padding-top: 1em;
+  padding-right: 2.75rem;
   top: 0;
   z-index: 1;
   column-span: all;
